# d2l-homework

./: .jupytext  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: Probability.nb.py
