[tool.poetry]
name = "d2l"
version = "0.1.0"
description = ""
authors = ["matt.anderson <matt.anderson@veteransunited.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
