[tool.poetry]
name = "d2l"
version = "0.1.0"
description = ""
authors = ["matt.anderson <matt.anderson@veteransunited.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "1.13.1"
polars = "^0.17.0"
pandas = "^2.0.0"
connectorx = "0.3.2a3"
pyarrow = "^11.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
jupytext = "^1.14.5"
ipykernel = "^6.22.0"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
